fix: :wrench: Signature used relative image paths

--- a/email_signature/signature.html
+++ b/email_signature/signature.html
@@ -14,7 +14,7 @@
 		<tbody>
 			<tr>
 				<td>
-					<img src="logo.webp">
+					<img src="https://raw.githubusercontent.com/PeaceDiscipline/assets/main/email_signature/logo.webp">
 				</td>
 				<td style="width: 9px;"></td>
 				<td style="font-size: 10em; font-weight: 600;">
@@ -23,21 +23,27 @@
 						style="font-size: 18.7px; font-weight: initial; color: #666; margin-left: 20px;">
 						<tbody>
 							<tr>
-								<td><img src="youtube.webp"></td>
+								<td><img
+										src="https://raw.githubusercontent.com/PeaceDiscipline/assets/main/email_signature/youtube.webp">
+								</td>
 								<td>
 									<a href="https://youtube.com/@peacediscipline"
 										style="color: #666; text-decoration: none;">@peacediscipline</a>
 								</td>
 							</tr>
 							<tr>
-								<td><img src="link.webp"></td>
+								<td><img
+										src="https://raw.githubusercontent.com/PeaceDiscipline/assets/main/email_signature/link.webp">
+								</td>
 								<td>
 									<a href="https://peacediscipline.com"
 										style="color: #666; text-decoration: none;">peacediscipline.com</a>
 								</td>
 							</tr>
 							<tr>
-								<td><img src="pin.webp"></td>
+								<td><img
+										src="https://raw.githubusercontent.com/PeaceDiscipline/assets/main/email_signature/pin.webp">
+								</td>
 								<td>Cape Town, South Africa</td>
 							</tr>
 						</tbody>
