fix: :hammer: switched from webp to png
webp is being converted to jpeg which ruins the partially transparent images

--- a/email_signature/signature.html
+++ b/email_signature/signature.html
@@ -14,7 +14,7 @@
 		<tbody>
 			<tr>
 				<td>
-					<img src="https://raw.githubusercontent.com/PeaceDiscipline/assets/main/email_signature/logo.webp">
+					<img src="https://raw.githubusercontent.com/PeaceDiscipline/assets/main/email_signature/logo.png">
 				</td>
 				<td style="width: 9px;"></td>
 				<td style="font-size: 10em; font-weight: 600;">
@@ -24,7 +24,7 @@
 						<tbody>
 							<tr>
 								<td><img
-										src="https://raw.githubusercontent.com/PeaceDiscipline/assets/main/email_signature/youtube.webp">
+										src="https://raw.githubusercontent.com/PeaceDiscipline/assets/main/email_signature/youtube.png">
 								</td>
 								<td>
 									<a href="https://youtube.com/@peacediscipline"
@@ -33,7 +33,7 @@
 							</tr>
 							<tr>
 								<td><img
-										src="https://raw.githubusercontent.com/PeaceDiscipline/assets/main/email_signature/link.webp">
+										src="https://raw.githubusercontent.com/PeaceDiscipline/assets/main/email_signature/link.png">
 								</td>
 								<td>
 									<a href="https://peacediscipline.com"
@@ -42,7 +42,7 @@
 							</tr>
 							<tr>
 								<td><img
-										src="https://raw.githubusercontent.com/PeaceDiscipline/assets/main/email_signature/pin.webp">
+										src="https://raw.githubusercontent.com/PeaceDiscipline/assets/main/email_signature/pin.png">
 								</td>
 								<td>Cape Town, South Africa</td>
 							</tr>
