--- a/email_signature/signature.html
+++ b/email_signature/signature.html
@@ -9,15 +9,14 @@
 </head>
 
 <body>
-	<table cellpadding="0" cellspacing="0"
-		style="font-family: Verdana, Tahoma, sans-serif; color: gray; font-size: 22%;">
+	<table cellpadding="0" cellspacing="0" style="font-family: Verdana, Tahoma, sans-serif; color: gray;">
 		<tbody>
 			<tr>
 				<td>
 					<img src="https://raw.githubusercontent.com/PeaceDiscipline/assets/main/email_signature/logo.png">
 				</td>
 				<td style="width: 9px;"></td>
-				<td style="font-size: 10em; font-weight: 600;">
+				<td style="font-size: 35.2px; font-weight: 600;">
 					PEACE DISCIPLINE
 					<table cellpadding="0" cellspacing="10"
 						style="font-size: 18.7px; font-weight: initial; color: #666; margin-left: 20px;">
