fix: :pencil2: spelling

--- a/intro_animation/animation xhosa.html
+++ b/intro_animation/animation xhosa.html
@@ -277,7 +277,7 @@
 
 <body>
 	<div id="title">
-		Ukuqeqesha Okunoxolo
+		Ingqeqesho enoxolo
 	</div>
 	<svg viewBox="0 0 732 571" fill="none" xmlns="http://www.w3.org/2000/svg">
 		<circle class="p1" cx="548" cy="454" />
@@ -316,7 +316,7 @@
 	</svg>
 	<div id="quote">
 		<!-- Children need to feel safe with us in Xhosa -->
-		Kufuneka abantwana bazive bekhuselekile xa bephakathi kwethu
+		Abantwana kufuneka bazive bekhuselekile xa bephakathi kwethu
 	</div>
 </body>
 
